[project]
name = "loris-mri"
version = "27.0.0"
description = "The LORIS Python scripts"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">= 3.11"
dependencies = [
    "boto3==1.35.99",
    "google",
    "mat73",
    "matplotlib",
    "mne",
    "mne-bids>=0.14",
    "mysqlclient",
    "nibabel",
    "nilearn",
    "nose",
    "numpy",
    "protobuf>=3.0.0",
    "pybids==0.17.0",
    "pydicom",
    "python-dateutil",
    "scikit-learn",
    "scipy",
    "sqlalchemy>=2.0.0",
    "virtualenv",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/aces/loris-mri"

# TODO: Remove this statement once a real build backend has been configured.
[tool.setuptools]
py-modules = []

[tool.ruff]
src = ["python"]
include = ["python/**/*.py"]
exclude = ["python/react-series-data-viewer"]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = ["E202", "E203", "E221", "E241", "E251", "E272"]
select = ["E", "EXE", "F", "I", "N", "UP", "W"]

# The strict type checking configuration is used to type check only the modern (typed) modules. An
# additional basic type checking configuration to type check legacy modules can be found in the
# `test` directory.
[tool.pyright]
include = [
    "python/tests",
    "python/lib/db",
    "python/lib/import_dicom_study",
    "python/lib/util",
    "python/lib/bids.py",
    "python/lib/config.py",
    "python/lib/config_file.py",
    "python/lib/env.py",
    "python/lib/get_session_info.py",
    "python/lib/logging.py",
    "python/lib/make_env.py",
    "python/lib/scanner.py",
    "python/scripts/import_dicom_study.py",
    "python/scripts/summarize_dicom_study.py",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
# Integration tests are located in `python/tests/integration`, but they should be ran from the
# appropriate Docker image (usually using GitHub Actions).
testpaths = ["python/tests/unit"]
