[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loris"
version = "27.0.0"
description = "The LORIS Python package"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">= 3.11"
dependencies = [
    "boto3==1.35.99",
    "mat73",
    "mysqlclient",
    "nibabel",
    "nilearn",
    "nose",
    "numpy",
    "pybids==0.17.0",
    "pydicom",
    "python-dateutil",
    "scikit-learn",
    "scipy",
    "sqlalchemy>=2.0.0",
    "virtualenv",
    "loris-bids-reader @ {root:uri}/python/loris_bids_reader",
    "loris-eeg-chunker @ {root:uri}/python/loris_eeg_chunker",
    "loris-utils       @ {root:uri}/python/loris_utils",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/aces/loris-mri"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "python/lib",
    "python/tests",
]

[tool.ruff]
src = ["python"]
include = ["python/**/*.py"]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = ["E202", "E203", "E221", "E241", "E251", "E272"]
select = ["E", "EXE", "F", "I", "N", "RUF", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
# ORM models often have very long lines.
"python/lib/db/models/*.py" = ["E501"]

# The strict type checking configuration is used to type check only the modern (typed) modules. An
# additional basic type checking configuration to type check legacy modules can be found in the
# `test` directory.
[tool.pyright]
include = [
    "python/tests",
    "python/lib/db",
    "python/lib/imaging_lib",
    "python/lib/import_bids_dataset",
    "python/lib/import_dicom_study",
    "python/lib/bids.py",
    "python/lib/config.py",
    "python/lib/config_file.py",
    "python/lib/env.py",
    "python/lib/get_session_info.py",
    "python/lib/logging.py",
    "python/lib/make_env.py",
    "python/scripts/import_dicom_study.py",
    "python/scripts/summarize_dicom_study.py",
    "python/loris_bids_reader",
    "python/loris_utils",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
# Integration tests are located in `python/tests/integration`, but they should be ran from the
# appropriate Docker image (usually using GitHub Actions).
testpaths = ["python/tests/unit"]
