[project]
name = "loris-bids-importer"
version = "27.0.0"
description = "The LORIS BIDS importer"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.11"
dependencies = [
    "loris-bids-reader",
    "loris-utils",
]

[project.scripts]
import-bids-dataset = "loris_bids_importer.scripts.import_bids_dataset:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loris_bids_importer"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]
