[project]
name = "loris-bids-reader"
version = "27.0.0"
description = "The LORIS BIDS reader library"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.11"
dependencies = [
    "loris-utils",
    "pybids",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loris_bids_reader"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]
