[project]
name = "loris-bids-utils"
version = "27.0.0"
description = "The LORIS BIDS utilities library"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.11"
dependencies = [
    "loris-utils",
    "pybids",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loris_bids_utils"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]
