[project]
name = "loris-dicom-importer"
version = "27.0.0"
description = "The LORIS DICOM importer"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.11"
dependencies = [
    "loris-utils",
    "pydicom",
    "sqlalchemy",
]

[project.scripts]
import-dicom-study    = "loris_dicom_importer.scripts.import_dicom_study:main"
summarize-dicom-study = "loris_dicom_importer.scripts.summarize_dicom_study:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loris_dicom_importer"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]
