[project]
name = "loris-eeg-chunker"
version = "27.0.0"
description = "The LORIS EEG chunker"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.11"
dependencies = [
    "google",
    "mne",
    "mne-bids>=0.14",
    "numpy",
    "protobuf>=3.0.0",
    "scipy",
]

[project.scripts]
ctf-to-chunks    = "loris_eeg_chunker.scripts.ctf_to_chunks:main"
edf-to-chunks    = "loris_eeg_chunker.scripts.edf_to_chunks:main"
eeglab-to-chunks = "loris_eeg_chunker.scripts.eeglab_to_chunks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loris_eeg_chunker"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]
exclude = ["protocol_buffers"]
