[project]
name = "loris-ephys-server"
version = "27.0.0"
description = "LORIS electrophysiology server"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "fastapi",
    "mne",
    "mne-bids",
    "numpy",
    "uvicorn[standard]",
]

[project.entry-points."loris_server.loaders"]
loris-ephys-server = "loris_ephys_server.main:load"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loris_ephys_server"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]
