[project]
name = "loris-ephys-visualizer-module"
version = "27.0.0"
description = "LORIS electrophysiology visualizer module"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "fastapi",
    "mne",
    "mne-bids",
    "numpy",
    "uvicorn[standard]",
]

[project.entry-points."loris-server.loaders"]
ephys-visualizer = "loris_ephys_visualizer_module.server:load"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loris_ephys_visualizer_module"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]
