[project]
name = "loris-meg"
version = "27.0.0"
description = "LORIS MEG API"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "fastapi",
    "mne",
    "mne-bids",
    "numpy",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loris_meg"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]
