[project]
name = "loris-server"
version = "27.0.0"
description = "LORIS server"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pyjwt",
]

[project.scripts]
run-loris-server = "loris_server.cli.run_loris_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loris_server"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]
