[project]
name = "loris-tus-server"
version = "27.0.0"
description = "LORIS TUS server for large file uploads"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "fastapi",
    "tuspyserver",
    "uvicorn[standard]",
]

[project.entry-points."loris_server.loaders"]
loris-tus-server = "loris_tus_server.main:load"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loris_tus_server"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]