[project]
name = "loris-utils"
version = "27.0.0"
description = "The LORIS utilities library"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loris_utils"]

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src"]
